/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package polish.notation;

/**
 *
 * @author bli
 */
public class ExpressionProcessingException extends Exception {

    public ExpressionProcessingException(String message) {
        super(message);
    }        
    
}
